--- a/src/Theodore.css
+++ b/src/Theodore.css
@@ -15,6 +15,17 @@ body {
   font-family: "Century Gothic", sans-serif;
   border-radius: 15%;
 }
+.nopage{
+  padding: 40px;
+  text-align: center;
+  margin: auto;
+  margin-top: 5%;
+  color: white;
+  font-family: "Century Gothic", sans-serif;
+  border-radius: 15%;
+  font-size: 40px;
+}
+
 .box-img {
   border-radius: 50%;
   width: 200px;
