--- a/src/Theodore.css
+++ b/src/Theodore.css
@@ -3,6 +3,7 @@ body {
   padding: 0;
   background: #eb7c22 no-repeat;
   background-size: cover;
+  overflow-x: hidden;
 }
 .box {
   width: 450px;
@@ -58,5 +59,70 @@ ul {
   transition: all ease-in-out 250ms;
 }
 .box li a:hover {
+  text-shadow:0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #fff, 0 0 50px #fff, 0 0 60px #fff, 0 0 70px #fff;
+  transform: scale(1.3);
   color: #b9b9b9;
+}
+
+/* Nav Bar OwO <3 */
+
+nav{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-top: 25px;
+  padding-left: 10%;
+  padding-right: 10%;
+  font-family: "Century Gothic", sans-serif;
+}
+.logo{
+  color: white;
+  font-size: 38px;
+  font-family: "Century Gothic", sans-serif;
+  text-decoration: none;
+  font-weight: bold;
+}
+.logo:hover{
+  text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #fff, 0 0 50px #fff, 0 0 60px #fff, 0 0 70px #fff;
+  font-family: "Century Gothic", sans-serif;
+  transition: .5s;
+}
+nav ul li{
+  list-style-type: none;
+  display: inline-block;
+  padding: 10px 20px;
+}
+nav ul li a{
+  color: white;
+  text-decoration: none;
+  font-size: 21px;
+  font-weight: bold;
+  font-family: "Century Gothic", sans-serif;
+}
+nav ul li a:hover{
+  text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #fff, 0 0 50px #fff, 0 0 60px #fff, 0 0 70px #fff;
+  font-family: "Century Gothic", sans-serif;
+  transition: .3s;
+}
+button{
+  border: none;
+  background: #9b4c0b;
+  padding: 12px 30px;
+  border-radius: 30px;
+  color: white;
+  font-weight: bold;
+  font-size: 29px;
+  transition: .4s;
+  font-family: "Century Gothic", sans-serif;
+}
+button:hover{
+ transform: scale(1.3);
+ font-family: "Century Gothic", sans-serif;
+ cursor: pointer;
+ text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #fff, 0 0 50px #fff, 0 0 60px #fff, 0 0 70px #fff;
+}
+button a{
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
 }
