--- a/src/Theodore.css
+++ b/src/Theodore.css
@@ -108,7 +108,7 @@ button{
   border: none;
   background: #9b4c0b;
   padding: 12px 30px;
-  border-radius: 30px;
+  border-radius: 10px;
   color: white;
   font-weight: bold;
   font-size: 29px;
@@ -125,4 +125,26 @@ button a{
   color: white;
   text-decoration: none;
   font-weight: bold;
+}
+
+/* Cuties stuff */
+
+.cutie{
+  text-align: center;
+  margin: auto;
+  margin-top: 5%;
+  color: white;
+  font-family: "Century Gothic", sans-serif;
+  border-radius: 15%;
+  font-size: 40px;
+}
+.cutie h5{
+  text-align: center;
+  font-family: "Century Gothic", sans-serif;
+  border-radius: 15%;
+  font-size: 40px;
+}
+
+.cutie img {
+  border-radius: 50%;
 }
