--- a/src/css/cuties.css
+++ b/src/css/cuties.css
@@ -25,7 +25,7 @@ body {
   border-radius: 50%;
 }
 
-nav{
+nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -34,36 +34,38 @@ nav{
   padding-right: 10%;
   font-family: "Century Gothic", sans-serif;
 }
-.logo{
+.logo {
   color: white;
   font-size: 38px;
   font-family: "Century Gothic", sans-serif;
   text-decoration: none;
   font-weight: bold;
 }
-.logo:hover{
-  text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #fff, 0 0 50px #fff, 0 0 60px #fff, 0 0 70px #fff;
+.logo:hover {
+  text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #fff,
+    0 0 50px #fff, 0 0 60px #fff, 0 0 70px #fff;
   font-family: "Century Gothic", sans-serif;
-  transition: .5s;
+  transition: 0.5s;
 }
-nav ul li{
+nav ul li {
   list-style-type: none;
   display: inline-block;
   padding: 10px 20px;
 }
-nav ul li a{
+nav ul li a {
   color: white;
   text-decoration: none;
   font-size: 21px;
   font-weight: bold;
   font-family: "Century Gothic", sans-serif;
 }
-nav ul li a:hover{
-  text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #fff, 0 0 50px #fff, 0 0 60px #fff, 0 0 70px #fff;
+nav ul li a:hover {
+  text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #fff,
+    0 0 50px #fff, 0 0 60px #fff, 0 0 70px #fff;
   font-family: "Century Gothic", sans-serif;
-  transition: .3s;
+  transition: 0.3s;
 }
-button{
+button {
   border: none;
   background: #9b4c0b;
   padding: 12px 30px;
@@ -71,16 +73,17 @@ button{
   color: white;
   font-weight: bold;
   font-size: 29px;
-  transition: .4s;
+  transition: 0.4s;
   font-family: "Century Gothic", sans-serif;
 }
-button:hover{
- transform: scale(1.3);
- font-family: "Century Gothic", sans-serif;
- cursor: pointer;
- text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #fff, 0 0 50px #fff, 0 0 60px #fff, 0 0 70px #fff;
+button:hover {
+  transform: scale(1.3);
+  font-family: "Century Gothic", sans-serif;
+  cursor: pointer;
+  text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #fff,
+    0 0 50px #fff, 0 0 60px #fff, 0 0 70px #fff;
 }
-button a{
+button a {
   color: white;
   text-decoration: none;
   font-weight: bold;
