--- a/src/css/main.css
+++ b/src/css/main.css
@@ -16,7 +16,7 @@ body {
   font-family: "Century Gothic", sans-serif;
   border-radius: 8px;
 }
-.nopage{
+.nopage {
   padding: 40px;
   text-align: center;
   margin: auto;
@@ -59,7 +59,8 @@ ul {
   transition: all ease-in-out 250ms;
 }
 .box li a:hover {
-  text-shadow:0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #fff, 0 0 50px #fff, 0 0 60px #fff, 0 0 70px #fff;
+  text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #fff,
+    0 0 50px #fff, 0 0 60px #fff, 0 0 70px #fff;
   transform: scale(1.3);
   color: #b9b9b9;
 }
@@ -78,7 +79,7 @@ footer {
 
 /* Nav Bar OwO <3 */
 
-nav{
+nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -87,36 +88,38 @@ nav{
   padding-right: 10%;
   font-family: "Century Gothic", sans-serif;
 }
-.logo{
+.logo {
   color: white;
   font-size: 38px;
   font-family: "Century Gothic", sans-serif;
   text-decoration: none;
   font-weight: bold;
 }
-.logo:hover{
-  text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #fff, 0 0 50px #fff, 0 0 60px #fff, 0 0 70px #fff;
+.logo:hover {
+  text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #fff,
+    0 0 50px #fff, 0 0 60px #fff, 0 0 70px #fff;
   font-family: "Century Gothic", sans-serif;
-  transition: .5s;
+  transition: 0.5s;
 }
-nav ul li{
+nav ul li {
   list-style-type: none;
   display: inline-block;
   padding: 10px 20px;
 }
-nav ul li a{
+nav ul li a {
   color: white;
   text-decoration: none;
   font-size: 21px;
   font-weight: bold;
   font-family: "Century Gothic", sans-serif;
 }
-nav ul li a:hover{
-  text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #fff, 0 0 50px #fff, 0 0 60px #fff, 0 0 70px #fff;
+nav ul li a:hover {
+  text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #fff,
+    0 0 50px #fff, 0 0 60px #fff, 0 0 70px #fff;
   font-family: "Century Gothic", sans-serif;
-  transition: .3s;
+  transition: 0.3s;
 }
-button{
+button {
   border: none;
   background: #9b4c0b;
   padding: 12px 30px;
@@ -124,16 +127,17 @@ button{
   color: white;
   font-weight: bold;
   font-size: 29px;
-  transition: .4s;
+  transition: 0.4s;
   font-family: "Century Gothic", sans-serif;
 }
-button:hover{
- transform: scale(1.3);
- font-family: "Century Gothic", sans-serif;
- cursor: pointer;
- text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #fff, 0 0 50px #fff, 0 0 60px #fff, 0 0 70px #fff;
+button:hover {
+  transform: scale(1.3);
+  font-family: "Century Gothic", sans-serif;
+  cursor: pointer;
+  text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #fff,
+    0 0 50px #fff, 0 0 60px #fff, 0 0 70px #fff;
 }
-button a{
+button a {
   color: white;
   text-decoration: none;
   font-weight: bold;
@@ -141,7 +145,7 @@ button a{
 
 /* Cuties stuff */
 
-.cutie{
+.cutie {
   text-align: center;
   margin: auto;
   margin-top: 5%;
@@ -150,7 +154,7 @@ button a{
   border-radius: 15%;
   font-size: 40px;
 }
-.cutie h5{
+.cutie h5 {
   text-align: center;
   font-family: "Century Gothic", sans-serif;
   border-radius: 15%;
