--- a/src/css/main.css
+++ b/src/css/main.css
@@ -73,7 +73,7 @@ footer {
 @media screen and (orientation: portrait) {
   .box {
     width: 480px;
-    height: 640px;
+    /* height: 640px; */
   }
 }
 
