--- a/src/css/404.css
+++ b/src/css/404.css
@@ -6,9 +6,21 @@ body {
   overflow-x: hidden;
 }
 
+/* .box {
+  width: 450px;
+  background: rgba(0, 0, 0, 0.4);
+  text-align: center;
+  margin: auto;
+  margin-top: 5%;
+  color: white;
+  font-family: "Century Gothic", sans-serif;
+  border-radius: 8px;
+} */
+
 .box {
   width: 450px;
   background: rgba(0, 0, 0, 0.4);
+  padding: 40px;
   text-align: center;
   margin: auto;
   margin-top: 5%;
