--- a/src/css/cuties.css
+++ b/src/css/cuties.css
@@ -65,7 +65,6 @@ body {
 }
 .box h1 {
   font-size: 40px;
-  letter-spacing: 4px;
   font-weight: 100;
   font-family: "Century Gothic", sans-serif;
 }
@@ -83,6 +82,14 @@ p{
   text-align: center;
   font-family: "Century Gothic", sans-serif;
   color: #fff;
+}
+
+.owo {
+  display: block;
+  width: 320px;
+  height: 50px;
+  border-bottom: solid #fff 4px;
+  margin: auto;
 }
 
 nav {
