small brain | OTHEERwsdaws

--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -54,8 +54,9 @@ ul
 
 @media screen and (orientation: portrait)
   .box
-    width: 480px
+    width: 280px
+    height: 480px
 
 @media screen and (orientation: landscape)
   .box
-    width: 480px
+    height: 460px
