--- a/src/css/main.css
+++ b/src/css/main.css
@@ -59,11 +59,12 @@ ul {
 
 @media screen and (orientation: portrait) {
   .box {
-    width: 480px;
+    width: 280px;
+    height: 480px;
   }
 }
 @media screen and (orientation: landscape) {
   .box {
-    width: 480px;
+    height: 460px;
   }
 }
