--- a/src/sass/nav.sass
+++ b/src/sass/nav.sass
@@ -25,7 +25,7 @@ nav ul li
   padding: 10px 20px
 
   a
-    color: white
+    color: white  
     text-decoration: none
     font-size: 21px
     font-weight: bold
@@ -35,6 +35,7 @@ nav ul li
       text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #fff, 0 0 50px #fff, 0 0 60px #fff, 0 0 70px #fff
       font-family: "Century Gothic", sans-serif
       transition: 0.3s
+      cursor: pointer
 
 button
   border: none
