--- a/src/sass/cuties.sass
+++ b/src/sass/cuties.sass
@@ -13,10 +13,19 @@ body
   text-align: center
   margin: auto
   margin-top: 5%
+  margin-bottom: 10%
   color: white
   font-family: "Century Gothic", sans-serif
   border-radius: 8px
-  float: center
+  float: left
+
+#Right
+  float: right
+  margin-right: 300px
+
+#Left
+  float: left
+  margin-left: 300px
 
 .box-img
   border-radius: 50%
