ghbjmbmnjkn j,njknmkj,nkj,m

--- a/src/css/cuties.css
+++ b/src/css/cuties.css
@@ -7,7 +7,7 @@ body {
   font-family: "Century Gothic", sans-serif;
 }
 
-.box {
+div.box {
   width: 450px;
   background: rgba(0, 0, 0, 0.4);
   padding: 40px;
@@ -61,6 +61,26 @@ p {
   display: block;
   width: 320px;
   height: 50px;
-  border-bottom: solid #fff 7px;
+  border-bottom: solid #5e2a00 7px;
   margin: auto;
+}
+
+.owos {
+  display: block;
+  width: 620px;
+  height: 50px;
+  border-bottom: solid #5e2a00 7px;
+  margin: auto;
+}
+
+@media screen and (orientation: portrait) {
+  .box {
+    width: 280px;
+    height: 480px;
+  }
+}
+@media screen and (orientation: landscape) {
+  .box {
+    float: none;
+  }
 }
