--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,9 +1,8 @@
 body {
   margin: 0;
   padding: 0;
-  background: #eb7c22 no-repeat;
+  background-image: linear-gradient(#eb7c22, #ff9f51);
   background-size: cover;
-  overflow-x: hidden;
 }
 
 .box {
@@ -19,6 +18,7 @@ body {
 }
 
 .box-img {
+  border: 8px solid #fff;
   border-radius: 50%;
   width: 200px;
   height: 200px;
