--- a/src/sass/cuties.sass
+++ b/src/sass/cuties.sass
@@ -1,7 +1,7 @@
 body
   margin: 0
   padding: 0
-  background: #eb7c22 no-repeat
+  background-image: linear-gradient(#eb7c22, #ff9f51)
   background-size: cover
   overflow-x: hidden
   font-family: "Century Gothic", sans-serif
