--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -1,9 +1,8 @@
 body
   margin: 0
   padding: 0
-  background: #eb7c22 no-repeat
+  background-image: linear-gradient(#eb7c22, #ff9f51)
   background-size: cover
-  overflow-x: hidden
 
 .box
   width: 450px
@@ -17,6 +16,7 @@ body
   border-radius: 8px
 
 .box-img
+  border: 8px solid #fff
   border-radius: 50%
   width: 200px
   height: 200px
