--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -1,8 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap')
+
+*
+  font-family: 'Poppins', sans-serif
+  
 body
   margin: 0
   padding: 0
-  background-image: linear-gradient(#eb7c22, #ff9f51)
+  height: 100vh
+  background: #eb7c22 no-repeat
   background-size: cover
+  font-family: 'Poppins', sans-serif
+
+  
 
 .box
   width: 450px
@@ -12,7 +21,6 @@ body
   margin: auto
   margin-top: 5%
   color: white
-  font-family: "Century Gothic", sans-serif
   border-radius: 8px
 
 .box-img
@@ -24,13 +32,11 @@ body
 .box
   h1
     font-size: 40px
-    letter-spacing: 4px
-    font-weight: 100
+    text-transform: capitalize
+    font-family: 'Poppins', sans-serif
 
   h5
     font-size: 20px
-    letter-spacing: 3px
-    font-weight: 100
 
 ul
   margin: 0
@@ -53,9 +59,9 @@ ul
 
 @media screen and (orientation: portrait)
   .box
-    width: 280px
-    height: 480px
+    width: 380px
+    height: 520px
 
 @media screen and (orientation: landscape)
   .box
-    height: 460px
+    height: 510px
