--- a/src/css/cuties.css
+++ b/src/css/cuties.css
@@ -39,6 +39,13 @@ div.box {
   font-family: "Poppins", sans-serif;
 }
 
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
+
 .box h1 {
   font-size: 40px;
   font-weight: 100;
@@ -79,6 +86,20 @@ p {
   margin-height: 480px;
 }
 
+@media screen and (orientation: landscape) {
+  .box {
+    float: none;
+  }
+  #Right {
+    float: none;
+    margin-left: 645px;
+  }
+  #Left {
+    float: none;
+    margin-left: 645px;
+    margin-top: -50px;
+  }
+}
 @media screen and (orientation: portrait) {
   body {
     -webkit-backface-visibility: hidden;
