--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -62,3 +62,9 @@ button a {
   text-decoration: none;
   font-weight: bold;
 }
+
+@media screen and (orientation: portrait) {
+  nav ul li {
+    transform: scale(1.2);
+  }
+}
