--- a/src/sass/nav.sass
+++ b/src/sass/nav.sass
@@ -58,3 +58,7 @@ button
     color: white
     text-decoration: none
     font-weight: bold
+
+@media screen and (orientation: portrait)
+  nav ul li
+    transform: scale(1.2)
