--- a/src/css/aboutme.css
+++ b/src/css/aboutme.css
@@ -13,6 +13,7 @@
 .wrapper {
   min-height: 100vh;
   width: 100%;
+  background-image: linear-gradient(#eb7c22, #ff9f51);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -42,13 +43,13 @@ article h1:after {
   margin: auto;
 }
 
-/* article img {
+article img {
   height: 200px;
   width: 200px;
   border: 8px solid #fff;
   border-radius: 50%;
   margin-top: 60px;
-} */
+}
 
 blockquote {
   letter-spacing: normal;
